# sgp4-benchmark

./: .gitignore  Cargo.toml  README.md  configuration.json  groups.json
cpp/: meson.build
cpp/src/: propagate.cpp
rust/: Cargo.toml
rust/src/: propagate.rs  propagate_afspc.rs
src/: accuracy.rs  configuration.rs  download.rs  speed.rs
